Bug 1860840 - return error for invalid hvcc config when converting sample. r=media-playback-reviewers,padenot

Differential Revision: https://phabricator.services.mozilla.com/D191794