dom/media/platforms/agnostic/bytestreams/AnnexB.h
@@ -44,7 +44,8 @@ class AnnexB {
       mozilla::MediaRawData* aSample,
       const RefPtr<mozilla::MediaByteBuffer>& aAVCCHeader = nullptr);
   // Convert a sample from Annex B to HVCC. An HVCC extradata must not be set.
-  static bool ConvertSampleToHVCC(mozilla::MediaRawData* aSample);
+  static Result<mozilla::Ok, nsresult> ConvertSampleToHVCC(
+      mozilla::MediaRawData* aSample);
 
   // Covert sample to 4 bytes NALU byte stream.
   static mozilla::Result<mozilla::Ok, nsresult> ConvertAVCCTo4BytesAVCC(
